# LibGeodesicOPPGC

./: .gitignore  CMakeLists.txt  CPointCloud.cpp  README.md  cmathutilities.cpp  cmathutilities.h  main.cpp
NurbLibSt/: Arrays.h  CCurve2D.cpp  LIN_SYS_EIGEN.CPP  LIN_SYS_IMSL.cpp  LIN_SYS_INTEL.cpp  MCLSEXST.cpp  MCLSEXST.h  NURBS_API.CPP  NurbsLibSt.cpp  NurbsLibSt.h  pch.h
PointClouds/: bird.xyz  bunny.xyz
include/: CPointCloud.h
